* accidentally removed metal:use-macro="layout.xml#layout" while adding   I18N - fixed * optimized layout for small screens * fixed bug resulting from stupid mootools behaviour - removing all   white space between elements on update * handle reply-to same as to and from headers, so it can be used for   replies
git-svn-id: svn+ssh://organiceit.lanscene.at/srv/svn/CiderWebmail/trunk@175 d1416938-2d58-0410-a1bb-95aaf470f215

--- a/root/static/css/base.css
+++ b/root/static/css/base.css
@@ -41,7 +41,7 @@ td, th
         {margin:0; padding:0.3em 0.5em; font-size:110%;}
 
 #content
-    {position:absolute; top:3em; bottom:0; left:13em; right:0; padding:0.2em 0.5em; background-color:#ffffff; border-top:1px solid #cccccc; border-left:1px solid #cccccc; overflow:auto;}
+    {position:absolute; top:0; bottom:0; left:13em; right:0; padding:0.2em 0.5em; background-color:#ffffff; border-top:1px solid #cccccc; border-left:1px solid #cccccc; overflow:auto;}
 
 #loading_message
     {display: none;}
